--- a/_footer.scss
+++ b/_footer.scss
@@ -45,13 +45,22 @@
     }
 
     #updates input {
-        width: 65%;
+        width: 100%;
         height: 38px;
         font-size: 16px;
         padding-left: 15px;
         border-radius: 10px;
         background-color: rgb(232 232 232);
 
+    }
+
+    #updates button {
+        width: 40%; 
+        height:42px; 
+        font-size: 16px; 
+        font-weight: 600; 
+        background-color: rgb(255 210 50); 
+        border-radius: 10px;
     }
 
     #delivery-opt {
