--- a/main.css
+++ b/main.css
@@ -76,16 +76,16 @@
   border-radius: 20px;
 }
 .navbar .search {
-  padding: 0 15px;
+  padding: 0 20px;
   border-right: 1px solid #fcfafa;
-  width: 25%;
+  width: 35%;
 }
 .navbar .search input {
   border: none;
   outline: none;
   width: 100%;
   height: 40px;
-  border-radius: 10px;
+  border-radius: 70px;
 }
 .navbar .icons span {
   margin-left: 15px;
@@ -470,12 +470,20 @@
   font-size: 23px;
 }
 .footer #updates input {
-  width: 65%;
+  width: 100%;
   height: 38px;
   font-size: 16px;
   padding-left: 15px;
   border-radius: 10px;
   background-color: rgb(232, 232, 232);
+}
+.footer #updates button {
+  width: 40%;
+  height: 42px;
+  font-size: 16px;
+  font-weight: 600;
+  background-color: rgb(255, 210, 50);
+  border-radius: 10px;
 }
 .footer #delivery-opt {
   display: flex;
