--- a/_footer.scss
+++ b/_footer.scss
@@ -45,7 +45,7 @@
     }
 
     #updates input {
-        width: 100%;
+        width: 100%
         height: 38px;
         font-size: 16px;
         padding-left: 15px;
