--- a/_navbar.scss
+++ b/_navbar.scss
@@ -122,7 +122,9 @@
             .menu {
                 display: none;
             }
-    
+            .navbar-menu a {
+                display: none;
+            }
             .menu-icon {
                 display: block;
             }
